Prevent translation icon from vertically expanding on Safari

--- a/src/AnnouncementBubble/NormalAnnouncementBubble.less
+++ b/src/AnnouncementBubble/NormalAnnouncementBubble.less
@@ -179,6 +179,7 @@ button.NormalAnnouncementBubble--deleteMenuItem {
 .NormalAnnouncementBubble--translatedLanguages--icon {
   .pathColor(@neutral_medium_gray);
   .margin--right--2xs();
+  height: 100%;
   width: 1rem;
 }
 
